Add a KitchenSink react component

--- a/public/kitchen-sink.html
+++ b/public/kitchen-sink.html
@@ -32,6 +32,13 @@
   </div>
 </div>
 
+<div class="content container">
+  <h1>Kitchen Sink</h1>
+  <div react-root="KitchenSink"></div>
+</div>
+
+<div class="spacing"></div>
+
 <div class="greeting">
   <div class="greeting-stripe">
     <div class="greeting-flex container">
