Fully migrated to Redux with minor website redesign

--- a/public/index.html
+++ b/public/index.html
@@ -24,29 +24,6 @@
     <script src="/bundles/client.bundle.js"></script>
   </head>
   <body>
-    <div class="header">
-      <div class="header-flex container">
-        <div class="header-item">
-          <a href="/">
-            <img class="header-logo" src="/images/warsow.png">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="content container">
-      <h1>502 Bad Gateway</h1>
-      <p>Web server is probably down for maintenance. We'll be back soon.</p>
-      <p>
-        <a class="button button-slanted button-color-discord button-icon"
-          href="https://discord.gg/4t65eJE"
-          target="_blank">
-          Report a problem
-          <i class="icon mdi mdi-discord"></i>
-        </a>
-      </p>
-    </div>
-
-    <div class="divider divider-hidden"></div>
+    <div class="react-root"></div>
   </body>
 </html>
